crates/solidity/testing/snapshots/bindings_output/built_ins/type_expr/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:11:28]
    │
 11 │         string memory v1 = type(Sample).name;
    │                            ────────┬────────  
    │                                    ╰────────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:12:27]
    │
 12 │         bytes memory v2 = type(Sample).creationCode;
    │                           ────────────┬────────────  
    │                                       ╰────────────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:13:27]
    │
 13 │         bytes memory v3 = type(Sample).runtimeCode;
    │                           ────────────┬───────────  
    │                                       ╰───────────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:15:28]
    │
 15 │         string memory v4 = type(ISample).name;
    │                            ─────────┬────────  
    │                                     ╰────────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:16:21]
    │
 16 │         bytes4 v5 = type(ISample).interfaceId;
    │                     ────────────┬────────────  
    │                                 ╰────────────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:18:24]
    │
 18 │         Direction v6 = type(Direction).min;
    │                        ─────────┬─────────  
    │                                 ╰─────────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:19:24]
    │
 19 │         Direction v7 = type(Direction).max;
    │                        ─────────┬─────────  
    │                                 ╰─────────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:21:19]
    │
 21 │         uint v8 = type(uint).min;
    │                   ───────┬──────  
    │                          ╰──────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:22:19]
    │
 22 │         uint v9 = type(uint).max;
    │                   ───────┬──────  
    │                          ╰──────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:24:29]
    │
 24 │         string memory v10 = type(Utils).name;
    │                             ────────┬───────  
    │                                     ╰───────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:25:28]
    │
 25 │         bytes memory v11 = type(Utils).creationCode;
    │                            ────────────┬───────────  
    │                                        ╰───────────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:26:28]
    │
 26 │         bytes memory v12 = type(Utils).runtimeCode;
    │                            ───────────┬───────────  
    │                                       ╰───────────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Sample {}
    │          ───┬──  
    │             ╰──── def: 1
    │ 
  3 │ interface ISample {}
    │           ───┬───  
    │              ╰───── def: 2
    │ 
  5 │ library Utils {}
    │         ──┬──  
    │           ╰──── def: 3
    │ 
  7 │ contract Test {
    │          ──┬─  
    │            ╰─── def: 4
  8 │     enum Direction { North, South, West, East }
    │          ────┬────   ──┬──  ──┬──  ──┬─  ──┬─  
    │              ╰───────────────────────────────── def: 5
    │                        │      │      │     │   
    │                        ╰─────────────────────── def: 6
    │                               │      │     │   
    │                               ╰──────────────── def: 7
    │                                      │     │   
    │                                      ╰───────── def: 8
    │                                            │   
    │                                            ╰─── def: 9
    │ 
 10 │     function test() public {
    │              ──┬─  
    │                ╰─── def: 10
 11 │         string memory v1 = type(Sample).name;
    │                       ─┬  
    │                        ╰── def: 11
 12 │         bytes memory v2 = type(Sample).creationCode;
    │                      ─┬  
    │                       ╰── def: 12
 13 │         bytes memory v3 = type(Sample).runtimeCode;
    │                      ─┬  
    │                       ╰── def: 13
    │ 
 15 │         string memory v4 = type(ISample).name;
    │                       ─┬  
    │                        ╰── def: 14
 16 │         bytes4 v5 = type(ISample).interfaceId;
    │                ─┬  
    │                 ╰── def: 15
    │ 
 18 │         Direction v6 = type(Direction).min;
    │         ────┬──── ─┬  
    │             ╰───────── ref: 5
    │                    │  
    │                    ╰── def: 16
 19 │         Direction v7 = type(Direction).max;
    │         ────┬──── ─┬  
    │             ╰───────── ref: 5
    │                    │  
    │                    ╰── def: 17
    │ 
 21 │         uint v8 = type(uint).min;
    │              ─┬  
    │               ╰── def: 18
 22 │         uint v9 = type(uint).max;
    │              ─┬  
    │               ╰── def: 19
    │ 
 24 │         string memory v10 = type(Utils).name;
    │                       ─┬─  
    │                        ╰─── def: 20
 25 │         bytes memory v11 = type(Utils).creationCode;
    │                      ─┬─  
    │                       ╰─── def: 21
 26 │         bytes memory v12 = type(Utils).runtimeCode;
    │                      ─┬─  
    │                       ╰─── def: 22
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │             │     contract Sample {}
    │             │     ─────────┬─────────  
    │             │              ╰─────────── definiens: 1
  2 │             ╭───▶ 
  3 │             ├─│ ▶ interface ISample {}
    │             │ │                          
    │             ╰──────────────────────────── definiens: 2
  4 │               ╭─▶ 
  5 │ │             ├─▶ library Utils {}
    │ │             │                      
    │ │             ╰────────────────────── definiens: 3
  6 │ ╭───────────────▶ 
    ┆ ┆                 
  8 │ │ │                   enum Direction { North, South, West, East }
    │ │ │               ───────────────────────┬┬─────┬──────┬─────┬────  
    │ │ │                                      ╰────────────────────────── definiens: 6
    │ │ │                                       │     │      │     │      
    │ │ │                                       ╰───────────────────────── definiens: 5
    │ │ │                                             │      │     │      
    │ │ │                                             ╰─────────────────── definiens: 7
    │ │ │                                                    │     │      
    │ │ │                                                    ╰──────────── definiens: 8
    │ │ │                                                          │      
    │ │ │                                                          ╰────── definiens: 9
  9 │ │ ╭─────────────▶ 
    ┆ ┆ ┆               
 11 │ │ │                       string memory v1 = type(Sample).name;
    │ │ │               ───────────────────────┬──────────────────────  
    │ │ │                                      ╰──────────────────────── definiens: 11
 12 │ │ │                       bytes memory v2 = type(Sample).creationCode;
    │ │ │               ──────────────────────────┬──────────────────────────  
    │ │ │                                         ╰──────────────────────────── definiens: 12
 13 │ │ │ │                     bytes memory v3 = type(Sample).runtimeCode;
    │ │ │ │             ──────────────────────────┬─────────────────────────  
    │ │ │ │                                       ╰─────────────────────────── definiens: 13
 14 │ │ │ ╭───────────▶ 
 15 │ │ │ ├───────────▶         string memory v4 = type(ISample).name;
    │ │ │ │                                                              
    │ │ │ ╰────────────────────────────────────────────────────────────── definiens: 14
 16 │ │ │     │                 bytes4 v5 = type(ISample).interfaceId;
    │ │ │     │         ───────────────────────┬───────────────────────  
    │ │ │     │                                ╰───────────────────────── definiens: 15
 17 │ │ │     ╭───────▶ 
 18 │ │ │     ├───────▶         Direction v6 = type(Direction).min;
    │ │ │     │                                                       
    │ │ │     ╰─────────────────────────────────────────────────────── definiens: 16
 19 │ │ │       │               Direction v7 = type(Direction).max;
    │ │ │       │       ──────────────────────┬─────────────────────  
    │ │ │       │                             ╰─────────────────────── definiens: 17
 20 │ │ │       ╭─────▶ 
 21 │ │ │       ├─────▶         uint v8 = type(uint).min;
    │ │ │       │                                           
    │ │ │       ╰─────────────────────────────────────────── definiens: 18
 22 │ │ │   │                   uint v9 = type(uint).max;
    │ │ │   │           ─────────────────┬────────────────  
    │ │ │   │                            ╰────────────────── definiens: 19
 23 │ │ │   ╭─────────▶ 
 24 │ │ │   ├─────────▶         string memory v10 = type(Utils).name;
    │ │ │   │                                                           
    │ │ │   ╰─────────────────────────────────────────────────────────── definiens: 20
 25 │ │ │                       bytes memory v11 = type(Utils).creationCode;
    │ │ │               ──────────────────────────┬──────────────────────────  
    │ │ │                                         ╰──────────────────────────── definiens: 21
 26 │ │ │                       bytes memory v12 = type(Utils).runtimeCode;
    │ │ │               ──────────────────────────┬─────────────────────────  
    │ │ │                                         ╰─────────────────────────── definiens: 22
 27 │ │ ├─────────────▶     }
    │ │ │                       
    │ │ ╰─────────────────────── definiens: 10
 28 │ ├───────────────▶ }
    │ │                     
    │ ╰───────────────────── definiens: 4
────╯
